--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta content="yes" name="apple-touch-fullscreen" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <meta name="description" content="Hi, I'm Manny Colon. If you're searching for me, start here. I'm a Software Engineer who enjoys designing web applications."/>
+    <meta name="keywords" content="software, developer, mobile, app, web, JavaScript"/>
+    <meta name="copyright" content="Manny Colon"/>
+    <meta name="Classification" content="portfolio"/>
+    <meta name="author" content="Manny, colonmanuel7@gmail.com"/>
+    <meta name="url" content="https://mannycolon.tech"/>
+    <meta name="identifier-URL" content="https://mannycolon.tech"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Manny Colon | Software Engineer"/>
+    <meta property="og:url" content="https://mannycolon.tech"/>
+    <meta property="og:image" content="https://mannycolon.tech/static/media/profile-pic.5904813b.jpg"/>
+    <meta property="og:description" content="Hi, I'm Manny Colon. If you're searching for me, start here. I'm a Software Engineer who enjoys designing web applications."/>
+    <meta property="og:site_name" content="Manny Colon | Software Engineer"/>
+    <meta name="og:email" content="colonmanuel7@gmail.com"/>
+    <meta name="twitter:site" content="@_mannycolon"/>
+    <meta name="twitter:creator" content="@_mannycolon"/>
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:image" content="https://mannycolon.tech/static/media/profile-pic.5904813b.jpg"/>
+    <meta name="twitter:title" content="Manny Colon | Software Engineer"/>
+    <meta name="twitter:description" content="Hi, I'm Manny Colon. If you're searching for me, start here. I'm a Software Engineer who enjoys designing web applications."/>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -11,6 +34,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/apple-icon.png">
+    <link rel="canonical" href="https://mannycolon.tech" />
     <!--     Fonts and icons     -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
     <link href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" rel="stylesheet">
@@ -23,7 +47,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Manny Colon</title>
+    <title>Manny Colon | Software Engineer</title>
   </head>
   <body>
     <noscript>
